@@ -36,7 +36,7 @@ addOracleFlavor flavor act = do
         opts <- getShakeOptionsRules
         let skip = shakeRebuildApply opts "" == RebuildLater
 
-        addBuiltinRule noLint $ \(OracleQ q) old mode -> case old of
+        addBuiltinRule noLint noCheck $ \(OracleQ q) old mode -> case old of
             Just old | (flavor /= Hash && skip) || (flavor == Cache && mode == RunDependenciesSame) ->
                 return $ RunResult ChangedNothing old $ decode' old
             _ -> do
